# pendulo-doble

./: README.md  pyproject.toml  requirements.txt  visorcito.py
arduino/angulo/: angulo.ino
env/: pyvenv.cfg
src/: oporto.py  visorcito.py
