[project]
name = "pendulo-doble"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego",email = "diegocsalcedoz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy (==1.3.2)",
    "cycler (==0.12.1)",
    "fonttools (==4.58.5)",
    "kiwisolver (==1.4.8)",
    "matplotlib (==3.10.3)",
    "numpy (==2.3.1)",
    "packaging (==25.0)",
    "pillow (==11.3.0)",
    "pyparsing (==3.2.3)",
    "pyserial (==3.5)",
    "python-dateutil (==2.9.0.post0)",
    "six (==1.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
